--- a/task2/index.html
+++ b/task2/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/logo.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/nav-bar.css">
     <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/textrow.css">
+    <link rel="stylesheet" href="css/moreInfo.css">
+    <link rel="stylesheet" href="css/line.css">
     <link rel="stylesheet" href="css/buttonLine.css">
 
     <link rel="stylesheet" href="css/footer.css">
@@ -55,9 +58,74 @@
         </div>
     </div>
     <div class="moreInfo">
-        <div class="moreInfo__item"></div>
-        <div class="moreInfo__item"></div>
-        <div class="moreInfo__item"></div>
+        <div class="moreInfo__item">
+            <div class="moreInfo__item__l-icon"><img class="moreInfo__item__icon"></div>
+            <div class="moreInfo__item__header">
+                FUSCE PELLENTESQUE SUSCIPIT NIBH
+            </div>
+            <div class="moreInfo__item__text">
+                Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
+            </div>
+            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> > </div></div>
+        </div>
+        <div class="moreInfo__item">
+            <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon"></div>
+            <div class="moreInfo__item__header">
+                INTEGER VITAE LIBERO AC RISUS AGESTAS
+            </div>
+            <div class="moreInfo__item__text">
+                Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
+            </div>
+            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> > </div></div>
+        </div>
+        <div class="moreInfo__item">
+            <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon"></div>
+            <div class="moreInfo__item__header">
+                VERSTIBULUM COMMODO FELIS QUIS TORT
+            </div>
+            <div class="moreInfo__item__text">
+                Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
+            </div>
+            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> > </div></div>
+        </div>
+    </div>
+    <div class="line l-auto">
+        <img src="images/line1.png">
+    </div>
+    <div class="text-row">
+        <div class="l-row">
+            <div class="text-row__header l-auto">CRAS IACULIS</div>
+            <div class="text-row__text l-auto">
+                Fusce lobortis lorem at ipsum semper sagittis
+            </div>
+        </div>
+    </div>
+    <div class="news">
+        <div class="news__item">
+
+        </div>
+        <div class="news__item">
+
+        </div>
+        <div class="news__item">
+
+        </div>
+    </div>
+    <div class="line l-auto">
+        <img src="images/line1.png">
+    </div>
+    <div class="text-row">
+        <div class="l-row">
+            <div class="text-row__header l-auto">NUNC DIGNISS</div>
+            <div class="text-row__text l-auto">
+                Praesent dapibus, neque id cursus faucibus,<br>
+                tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat <br>
+                volutpat. Nam dui mi, tincidunt quis, accumsan porttitor
+            </div>
+        </div>
+    </div>
+    <div class="buttonLine">
+        <div class="buttonLine__button">VIEW MORE</div>
     </div>
     <br>
 </div>
@@ -65,4 +133,5 @@
 Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
 </div>
 </body>
+</html>
 </html>
