a lot of crutches and bicycles

--- a/task2/index.html
+++ b/task2/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/moreInfo.css">
     <link rel="stylesheet" href="css/line.css">
     <link rel="stylesheet" href="css/buttonLine.css">
-
+    <link rel="stylesheet" href="css/news.css">
+    <link rel="stylesheet" href="css/products.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
@@ -59,34 +60,34 @@
     </div>
     <div class="moreInfo">
         <div class="moreInfo__item">
-            <div class="moreInfo__item__l-icon"><img class="moreInfo__item__icon"></div>
+            <div class="moreInfo__item__l-icon"><div class="moreInfo__item__icon-1"></div></div>
             <div class="moreInfo__item__header">
                 FUSCE PELLENTESQUE SUSCIPIT NIBH
             </div>
             <div class="moreInfo__item__text">
                 Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
             </div>
-            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> > </div></div>
+            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"></div></div>
         </div>
         <div class="moreInfo__item">
-            <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon"></div>
+            <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon-2"></div>
             <div class="moreInfo__item__header">
                 INTEGER VITAE LIBERO AC RISUS AGESTAS
             </div>
             <div class="moreInfo__item__text">
                 Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
             </div>
-            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> > </div></div>
+            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"> </div></div>
         </div>
         <div class="moreInfo__item">
-            <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon"></div>
+            <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon-3"></div>
             <div class="moreInfo__item__header">
                 VERSTIBULUM COMMODO FELIS QUIS TORT
             </div>
             <div class="moreInfo__item__text">
                 Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
             </div>
-            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> > </div></div>
+            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"></div></div>
         </div>
     </div>
     <div class="line l-auto">
@@ -100,16 +101,27 @@
             </div>
         </div>
     </div>
-    <div class="news">
+    <div class="l-news">
+        <div class="news">
         <div class="news__item">
-
+            <div class="news__item__header">VESTIBULUM COMMODO FELIS QUIS TORTOR</div>
+            <img class="news__item__photo" src="images/newsphoto1.png">
+            <div class="news__item__text">Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus.</div>
+            <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
         </div>
         <div class="news__item">
-
+            <div class="news__item__header">DONEC QUIS DUI AT<br>DOLOR TEMPOR INTERDUM</div>
+            <img class="news__item__photo" src="images/newsphoto2.png">
+            <div class="news__item__text">Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscing risus</div>
+            <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
         </div>
         <div class="news__item">
-
+            <div class="news__item__header">FUSCE LOBORTIS LOREM<br> AT IPSUM SEMPER</div>
+            <img class="news__item__photo" src="images/newsphoto3.png">
+            <div class="news__item__text">Faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique</div>
+            <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
         </div>
+    </div>
     </div>
     <div class="line l-auto">
         <img src="images/line1.png">
@@ -124,10 +136,29 @@
             </div>
         </div>
     </div>
-    <div class="buttonLine">
+    <div class="products l-auto">
+        <div class="products__title">OUR PRODUCTS</div>
+        <div class="products__items ">
+            <div class="products__items_l-item">
+                <div class="products__items__item">INTEGER VIT</div>
+                <div class="products__items__item">DONCE AMETUNO</div>
+            </div>
+
+            <div class="products__items__item">VOLUPTANIN</div>
+            <div class="products__items__item">TINCIDUN</div>
+            <div class="products__items__item">PORTTION SOUTI</div>
+            <div class="products__items_l-item">
+            <div class="products__items__item">NAMDUI SINOSI</div>
+            <div class="products__items__item">FERMNUTIN</div>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="buttonLine-more">
         <div class="buttonLine__button">VIEW MORE</div>
     </div>
-    <br>
+    <div class="main-footer"></div>
 </div>
 <div class="footer l-auto">Copyright(c) website name<br>
 Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
