added max- min- width

--- a/task2/index.html
+++ b/task2/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Title</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/base.css">
@@ -61,16 +64,17 @@
     <div class="moreInfo">
         <div class="moreInfo__item">
             <div class="moreInfo__item__l-icon"><div class="moreInfo__item__icon-1"></div></div>
-            <div class="moreInfo__item__header">
-                FUSCE PELLENTESQUE SUSCIPIT NIBH
-            </div>
-            <div class="moreInfo__item__text">
-                Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
-            </div>
-            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"></div></div>
-        </div>
+          <div class="moreInfo__item__block"><div class="moreInfo__item__header">
+              FUSCE PELLENTESQUE SUSCIPIT NIBH
+          </div>
+              <div class="moreInfo__item__text">
+                  Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
+              </div>
+              <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"></div></div>
+          </div> </div>
         <div class="moreInfo__item">
             <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon-2"></div>
+            <div class="moreInfo__item__block">
             <div class="moreInfo__item__header">
                 INTEGER VITAE LIBERO AC RISUS AGESTAS
             </div>
@@ -78,9 +82,10 @@
                 Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
             </div>
             <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"> </div></div>
-        </div>
+        </div></div>
         <div class="moreInfo__item">
             <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon-3"></div>
+            <div class="moreInfo__item__block">
             <div class="moreInfo__item__header">
                 VERSTIBULUM COMMODO FELIS QUIS TORT
             </div>
@@ -88,10 +93,10 @@
                 Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
             </div>
             <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"></div></div>
-        </div>
+        </div></div>
     </div>
     <div class="line l-auto">
-        <img src="images/line1.png">
+        <img src="images/line1.png" class="line_img" >
     </div>
     <div class="text-row">
         <div class="l-row">
@@ -105,26 +110,26 @@
         <div class="news">
         <div class="news__item">
             <div class="news__item__header">VESTIBULUM COMMODO FELIS QUIS TORTOR</div>
-            <img class="news__item__photo" src="images/newsphoto1.png">
+            <div class="news__item__photo"> <img class="news__item__photo__img" src="images/newsphoto1.png"></div>
             <div class="news__item__text">Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus.</div>
             <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
         </div>
         <div class="news__item">
             <div class="news__item__header">DONEC QUIS DUI AT<br>DOLOR TEMPOR INTERDUM</div>
-            <img class="news__item__photo" src="images/newsphoto2.png">
+           <div class="news__item__photo"> <img  img class="news__item__photo__img" src="images/newsphoto2.png"></div>
             <div class="news__item__text">Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscing risus</div>
             <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
         </div>
         <div class="news__item">
-            <div class="news__item__header">FUSCE LOBORTIS LOREM<br> AT IPSUM SEMPER</div>
-            <img class="news__item__photo" src="images/newsphoto3.png">
+            <div class="news__item__header">FUSCE LOBORTIS <br>LOREM AT IPSUM SEMPER</div>
+          <div class="news__item__photo"><img img class="news__item__photo__img" src="images/newsphoto3.png"></div>
             <div class="news__item__text">Faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique</div>
             <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
         </div>
     </div>
     </div>
     <div class="line l-auto">
-        <img src="images/line1.png">
+        <img src="images/line1.png" class="line_img" >
     </div>
     <div class="text-row">
         <div class="l-row">
@@ -155,7 +160,7 @@
         </div>
 
     </div>
-    <div class="buttonLine-more">
+    <div class="buttonLine-lesstop">
         <div class="buttonLine__button">VIEW MORE</div>
     </div>
     <div class="main-footer"></div>
