added 1-2 left-righ px

--- a/task2/index.html
+++ b/task2/index.html
@@ -76,7 +76,7 @@
             <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon-2"></div>
             <div class="moreInfo__item__block">
             <div class="moreInfo__item__header">
-                INTEGER VITAE LIBERO AC RISUS AGESTAS
+                INTEGER VITAE LIBERO <br> AC RISUS AGESTAS
             </div>
             <div class="moreInfo__item__text">
                 Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
