--- a/task2/index.html
+++ b/task2/index.html
@@ -9,163 +9,153 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/logo.css">
-    <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/nav-bar.css">
     <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/textrow.css">
-    <link rel="stylesheet" href="css/moreInfo.css">
+    <link rel="stylesheet" href="css/more-info.css">
     <link rel="stylesheet" href="css/line.css">
-    <link rel="stylesheet" href="css/buttonLine.css">
+    <link rel="stylesheet" href="css/button-line.css">
     <link rel="stylesheet" href="css/news.css">
     <link rel="stylesheet" href="css/products.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
-<div class="main l-auto">
+<div class="main">
     <div class="logo">
-        <div class="logo__shadow">
             <div class ="logo__img"></div>
-        </div>
     </div>
-    <div class="l-nav">
-        <div class="nav">
-            <div class="nav__item">HOME</div>
-            <div class="nav__item">ABOUT</div>
-            <div class="nav__item">SERICES</div>
-            <div class="nav__item">PRODUCTS</div>
-            <div class="nav__item">CONTACT</div>
-        </div>
-    </div>
-    <div class="banner l-auto">
-        <img src="images/banner-bg.png" class="banner__img">
+    <nav class="nav">
+            <a href="#" class="nav__item">HOME</a>
+            <a href="#" class="nav__item">ABOUT</a>
+            <a href="#" class="nav__item">SERICES</a>
+            <a href="#" class="nav__item">PRODUCTS</a>
+            <a href="#" class="nav__item">CONTACT</a>
+    </nav>
+    <div class="banner">
+        <img class="banner__img" src="images/banner-bg.png">
     </div>
     <div class="text-row">
-        <div class="l-row">
-            <div class="text-row__header l-auto"> LOREM IPSUM</div>
-            <div class="text-row__text l-auto">
+        <div class="text-row__header"> LOREM IPSUM</div>
+        <div class="text-row__text">
                 Donce nec justo eget felis facilisis fermentum.<br>
                 Aliquam porttit or mauris sit amet orci. Aenean dignissim pellentesque felis.
-            </div>
         </div>
     </div>
-    <div class="buttonLine">
-        <div class="buttonLine__button">READ MORE</div>
+    <div class="button-line">
+        <div class="button-line__lines">
+            <a class="button-line__button" href="#top">READ MORE</a>
+        </div>
     </div>
-    <div class="text-row">
-        <div class="l-row">
-            <div class="text-row__header l-auto">VIVAMUS VEST</div>
-            <div class="text-row__text l-auto">
+    <div class="text-row ">
+        <div class="text-row__header">VIVAMUS VEST</div>
+        <div class="text-row__text">
                 Sed adipiscing ornare risus. Morbi est est, blandit sit ament, sagittis vel, euismod vel, velit.<br>
                 Pellentesque agestat sem. Suspendisse commodo ullamcorper magna.
-            </div>
         </div>
     </div>
-    <div class="moreInfo">
-        <div class="moreInfo__item">
-            <div class="moreInfo__item__l-icon"><div class="moreInfo__item__icon-1"></div></div>
-          <div class="moreInfo__item__block"><div class="moreInfo__item__header">
+    <div class="more-info">
+        <div class="more-info__item">
+            <img class="more-info__icon more-info__icon-img-1">
+          <div class="more-info__block">
+              <div class="more-info__header">
               FUSCE PELLENTESQUE SUSCIPIT NIBH
           </div>
-              <div class="moreInfo__item__text">
+              <div class="more-info__text">
                   Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
               </div>
-              <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"></div></div>
+              <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
           </div> </div>
-        <div class="moreInfo__item">
-            <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon-2"></div>
-            <div class="moreInfo__item__block">
-            <div class="moreInfo__item__header">
+        <div class="more-info__item">
+        <img class="more-info__icon more-info__icon-img-2">
+            <div class="more-info__block">
+            <div class="more-info__header">
                 INTEGER VITAE LIBERO <br> AC RISUS AGESTAS
             </div>
-            <div class="moreInfo__item__text">
+            <div class="more-info__text">
                 Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
             </div>
-            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"> </div></div>
+                <a href="#"> <div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"> </div></div></a>
         </div></div>
-        <div class="moreInfo__item">
-            <div class="moreInfo__item__l-icon"> <img class="moreInfo__item__icon-3"></div>
-            <div class="moreInfo__item__block">
-            <div class="moreInfo__item__header">
+        <div class="more-info__item">
+        <img class="more-info__icon more-info__icon-img-3">
+            <div class="more-info__block">
+            <div class="more-info__header">
                 VERSTIBULUM COMMODO FELIS QUIS TORT
             </div>
-            <div class="moreInfo__item__text">
+            <div class="more-info__text">
                 Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
             </div>
-            <div class="moreInfo__item__link">MORE INFO<div class="moreInfo__item__link__arrow"> <img src="images/arrow.png"></div></div>
+                <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
         </div></div>
     </div>
-    <div class="line l-auto">
-        <img src="images/line1.png" class="line_img" >
+    <div class="line">
+        <div class="line__img"></div>
     </div>
-    <div class="text-row">
-        <div class="l-row">
-            <div class="text-row__header l-auto">CRAS IACULIS</div>
-            <div class="text-row__text l-auto">
+    <div class="text-row text-row-padding-after-line">
+        <div class="text-row__header">CRAS IACULIS</div>
+        <div class="text-row__text">
                 Fusce lobortis lorem at ipsum semper sagittis
-            </div>
         </div>
     </div>
-    <div class="l-news">
-        <div class="news">
+    <div class="news">
         <div class="news__item">
-            <div class="news__item__header">VESTIBULUM COMMODO FELIS QUIS TORTOR</div>
-            <div class="news__item__photo"> <img class="news__item__photo__img" src="images/newsphoto1.png"></div>
-            <div class="news__item__text">Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus.</div>
-            <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
+            <div class="news__header">VESTIBULUM COMMODO FELIS QUIS TORTOR</div>
+            <div class="news__photo"> <img class="news__photo" src="images/newsphoto1.png"></div>
+            <div class="news__text">Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus.</div>
+            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
         </div>
         <div class="news__item">
-            <div class="news__item__header">DONEC QUIS DUI AT<br>DOLOR TEMPOR INTERDUM</div>
-           <div class="news__item__photo"> <img  img class="news__item__photo__img" src="images/newsphoto2.png"></div>
-            <div class="news__item__text">Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscing risus</div>
-            <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
+            <div class="news__header">DONEC QUIS DUI AT<br>DOLOR TEMPOR INTERDUM</div>
+            <div class="news__photo"> <img class="news__photo" src="images/newsphoto2.png"></div>
+            <div class="news__text">Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscing risus</div>
+            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
         </div>
         <div class="news__item">
-            <div class="news__item__header">FUSCE LOBORTIS <br>LOREM AT IPSUM SEMPER</div>
-          <div class="news__item__photo"><img img class="news__item__photo__img" src="images/newsphoto3.png"></div>
-            <div class="news__item__text">Faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique</div>
-            <div class="news__item__link">MORE INFO<div class="news__item__link__arrow"> <img src="images/arrow.png"></div></div>
+            <div class="news__header">FUSCE LOBORTIS <br>LOREM AT IPSUM SEMPER</div>
+            <div class="news__photo"> <img class="news__photo" src="images/newsphoto3.png"></div>
+            <div class="news__text">Faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique</div>
+            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
         </div>
     </div>
+    <div class="line">
+        <div class="line__img"></div>
     </div>
-    <div class="line l-auto">
-        <img src="images/line1.png" class="line_img" >
-    </div>
-    <div class="text-row">
-        <div class="l-row">
-            <div class="text-row__header l-auto">NUNC DIGNISS</div>
-            <div class="text-row__text l-auto">
+    <div class="text-row text-row-padding-after-line">
+        <div class="text-row__header">NUNC DIGNISS</div>
+        <div class="text-row__text">
                 Praesent dapibus, neque id cursus faucibus,<br>
                 tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat <br>
                 volutpat. Nam dui mi, tincidunt quis, accumsan porttitor
-            </div>
         </div>
     </div>
-    <div class="products l-auto">
+    <div class="products">
         <div class="products__title">OUR PRODUCTS</div>
         <div class="products__items ">
-            <div class="products__items_l-item">
-                <div class="products__items__item">INTEGER VIT</div>
-                <div class="products__items__item">DONCE AMETUNO</div>
+            <div class="products__l-items">
+                <div class="products__item">INTEGER VIT</div>
+                <div class="products__item">DONCE AMETUNO</div>
             </div>
 
-            <div class="products__items__item">VOLUPTANIN</div>
-            <div class="products__items__item">TINCIDUN</div>
-            <div class="products__items__item">PORTTION SOUTI</div>
-            <div class="products__items_l-item">
-            <div class="products__items__item">NAMDUI SINOSI</div>
-            <div class="products__items__item">FERMNUTIN</div>
+            <div class="products__item">VOLUPTANIN</div>
+            <div class="products__item">TINCIDUN</div>
+            <div class="products__item">PORTTION SOUTI</div>
+            <div class="products__l-items">
+            <div class="products__item">NAMDUI SINOSI</div>
+            <div class="products__item">FERMNUTIN</div>
             </div>
 
         </div>
 
     </div>
-    <div class="buttonLine-lesstop">
-        <div class="buttonLine__button">VIEW MORE</div>
+    <div class="button-line button-line-padding-top-less">
+        <div class="button-line__lines">
+            <a class="button-line__button" href="#top">VIEW MORE</a>
+        </div>
     </div>
-    <div class="main-footer"></div>
+    <div class="footer"></div>
 </div>
-<div class="footer l-auto">Copyright(c) website name<br>
+<div class="copyright">Copyright(c) website name<br>
 Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
 </div>
 </body>
