refactor block body

--- a/task2/index.html
+++ b/task2/index.html
@@ -8,6 +8,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/logo.css">
     <link rel="stylesheet" href="css/nav-bar.css">
     <link rel="stylesheet" href="css/banner.css">
@@ -20,8 +21,8 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
-<body>
-<div class="main">
+<body class="body">
+<div class="body__main">
     <div class="logo">
             <div class ="logo__img"></div>
     </div>
@@ -155,7 +156,7 @@
     </div>
     <div class="footer"></div>
 </div>
-<div class="copyright">Copyright(c) website name<br>
+<div class="body__copyright">Copyright(c) website name<br>
 Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
 </div>
 </body>
