add semantic tags

--- a/task3/index.html
+++ b/task3/index.html
@@ -23,82 +23,82 @@
 </head>
 <body class="body">
 <div class="body__main">
-    <div class="logo">
-            <div class ="logo__img"></div>
-    </div>
+    <header class="logo">
+        <div class ="logo__img"></div>
+    </header>
     <nav class="nav">
-            <a href="#" class="nav__item">HOME</a>
-            <a href="#" class="nav__item">ABOUT</a>
-            <a href="#" class="nav__item">SERICES</a>
-            <a href="#" class="nav__item">PRODUCTS</a>
-            <a href="#" class="nav__item">CONTACT</a>
+        <a href="#" class="nav__item">HOME</a>
+        <a href="#" class="nav__item">ABOUT</a>
+        <a href="#" class="nav__item">SERICES</a>
+        <a href="#" class="nav__item">PRODUCTS</a>
+        <a href="#" class="nav__item">CONTACT</a>
     </nav>
     <div class="banner">
         <img class="banner__img" src="images/banner-bg.png">
     </div>
-    <div class="text-row">
+    <article class="text-row">
         <div class="text-row__header"> LOREM IPSUM</div>
         <div class="text-row__text">
-                Donce nec justo eget felis facilisis fermentum.<br>
-                Aliquam porttit or mauris sit amet orci. Aenean dignissim pellentesque felis.
+            Donce nec justo eget felis facilisis fermentum.<br>
+            Aliquam porttit or mauris sit amet orci. Aenean dignissim pellentesque felis.
         </div>
-    </div>
+    </article>
     <div class="button-line">
         <div class="button-line__lines">
             <a class="button-line__button" href="#top">READ MORE</a>
         </div>
     </div>
-    <div class="text-row ">
+    <article class="text-row ">
         <div class="text-row__header">VIVAMUS VEST</div>
         <div class="text-row__text">
-                Sed adipiscing ornare risus. Morbi est est, blandit sit ament, sagittis vel, euismod vel, velit.<br>
-                Pellentesque agestat sem. Suspendisse commodo ullamcorper magna.
+            Sed adipiscing ornare risus. Morbi est est, blandit sit ament, sagittis vel, euismod vel, velit.<br>
+            Pellentesque agestat sem. Suspendisse commodo ullamcorper magna.
         </div>
-    </div>
+    </article>
     <div class="more-info">
         <div class="more-info__item">
             <img class="more-info__icon more-info__icon-img-1">
-          <div class="more-info__block">
-              <div class="more-info__header">
-              FUSCE PELLENTESQUE SUSCIPIT NIBH
-          </div>
-              <div class="more-info__text">
-                  Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
-              </div>
-              <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
-          </div> </div>
-        <div class="more-info__item">
-        <img class="more-info__icon more-info__icon-img-2">
             <div class="more-info__block">
-            <div class="more-info__header">
-                INTEGER VITAE LIBERO <br> AC RISUS AGESTAS
-            </div>
-            <div class="more-info__text">
-                Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
-            </div>
-                <a href="#"> <div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"> </div></div></a>
-        </div></div>
-        <div class="more-info__item">
-        <img class="more-info__icon more-info__icon-img-3">
-            <div class="more-info__block">
-            <div class="more-info__header">
-                VERSTIBULUM COMMODO FELIS QUIS TORT
-            </div>
-            <div class="more-info__text">
-                Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
-            </div>
+                <div class="more-info__header">
+                    FUSCE PELLENTESQUE SUSCIPIT NIBH
+                </div>
+                <div class="more-info__text">
+                    Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
+                </div>
                 <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
-        </div></div>
+            </div> </div>
+        <div class="more-info__item">
+            <img class="more-info__icon more-info__icon-img-2">
+            <div class="more-info__block">
+                <div class="more-info__header">
+                    INTEGER VITAE LIBERO <br> AC RISUS AGESTAS
+                </div>
+                <div class="more-info__text">
+                    Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
+                </div>
+                <a href="#"> <div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"> </div></div></a>
+            </div></div>
+        <div class="more-info__item">
+            <img class="more-info__icon more-info__icon-img-3">
+            <div class="more-info__block">
+                <div class="more-info__header">
+                    VERSTIBULUM COMMODO FELIS QUIS TORT
+                </div>
+                <div class="more-info__text">
+                    Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
+                </div>
+                <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
+            </div></div>
     </div>
     <div class="line">
         <div class="line__img"></div>
     </div>
-    <div class="text-row text-row-padding-after-line">
+    <article class="text-row text-row-padding-after-line">
         <div class="text-row__header">CRAS IACULIS</div>
         <div class="text-row__text">
-                Fusce lobortis lorem at ipsum semper sagittis
+            Fusce lobortis lorem at ipsum semper sagittis
         </div>
-    </div>
+    </article>
     <div class="news">
         <div class="news__item">
             <div class="news__header">VESTIBULUM COMMODO FELIS QUIS TORTOR</div>
@@ -122,14 +122,14 @@
     <div class="line">
         <div class="line__img"></div>
     </div>
-    <div class="text-row text-row-padding-after-line">
+    <article class="text-row text-row-padding-after-line">
         <div class="text-row__header">NUNC DIGNISS</div>
         <div class="text-row__text">
-                Praesent dapibus, neque id cursus faucibus,<br>
-                tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat <br>
-                volutpat. Nam dui mi, tincidunt quis, accumsan porttitor
+            Praesent dapibus, neque id cursus faucibus,<br>
+            tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat <br>
+            volutpat. Nam dui mi, tincidunt quis, accumsan porttitor
         </div>
-    </div>
+    </article>
     <div class="products">
         <div class="products__title">OUR PRODUCTS</div>
         <div class="products__items ">
@@ -142,8 +142,8 @@
             <div class="products__item">TINCIDUN</div>
             <div class="products__item">PORTTION SOUTI</div>
             <div class="products__l-items">
-            <div class="products__item">NAMDUI SINOSI</div>
-            <div class="products__item">FERMNUTIN</div>
+                <div class="products__item">NAMDUI SINOSI</div>
+                <div class="products__item">FERMNUTIN</div>
             </div>
 
         </div>
@@ -156,9 +156,9 @@
     </div>
     <div class="footer"></div>
 </div>
-<div class="body__copyright">Copyright(c) website name<br>
-Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
-</div>
+<footer class="body__copyright">Copyright(c) website name<br>
+    Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
+</footer>
 </body>
 </html>
 </html>
